--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import "tailwindcss";
+@plugin "daisyui";
+
+.container-app {
+  @apply w-full lg:w-8/12 xl:w-9/12 m-auto;
+}
