--- a/src/app/components/back-button/back-button.component.html
+++ b/src/app/components/back-button/back-button.component.html
@@ -1,4 +1,4 @@
-<div class="pt-2 cursor-pointer hover:text-teal-400 text-sm-2xl"
+<div class="pt-2 cursor-pointer hover:text-teal-400 text-gray-900 dark:text-gray-100 text-sm-2xl"
 (click)="backPage()">
     <svg  class="h-8 w-8 fill-current sm:h-10 md:w-10 rtl:rotate-180"
         xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
