--- a/src/app/pages/event-list/event-list.component.html
+++ b/src/app/pages/event-list/event-list.component.html
@@ -28,7 +28,7 @@
 
             @if(events()?.length == 0 ){
             <div class="flex flex-col p-5 gap-5">
-                <div>No s'han trobat events ni activitats amb la vostra sel.leció</div>
+                <div class="text-gray-900 dark:text-gray-100">No s'han trobat events ni activitats amb la vostra sel.leció</div>
                 <a class="btn bg-teal-500 text-white hover:bg-teal-800 w-50"
                 (click)="backPage()">Tornar</a>
             </div>
