--- a/src/app/components/swiper-categorias/swiper-categorias.component.html
+++ b/src/app/components/swiper-categorias/swiper-categorias.component.html
@@ -1,4 +1,4 @@
-<p class="p-3 py-2 font-bold text-lg">{{title() | titlecase}}: {{data()!.length}}</p>
+<p class="p-3 py-2 font-bold text-lg text-gray-900 dark:text-gray-100">{{title() | titlecase}}: {{data()!.length}}</p>
 <swiper-container breakpoints='{
     "320":  { "slidesPerView": 3 },
     "640":  { "slidesPerView": 4 }, 
