--- a/src/app/pages/event/event.component.html
+++ b/src/app/pages/event/event.component.html
@@ -19,7 +19,7 @@
 
             @if (event()?.modalitat ) {
             <div class="flex flex-nowrap gap-3 mb-2">
-                <span class="font-bold  text-teal-800">Modalitat:</span>
+                <span class="font-bold  text-teal-800 dark:text-teal-300">Modalitat:</span>
                 @if(event()!.modalitat === 'Virtual'){
                 <span class="text-amber-50 bg-amber-700 px-4 flex align-middle rounded-3xl pt-1">{{
                     event()?.modalitat
@@ -77,51 +77,51 @@
     <section class="  mt-2 px-2">
         @if ( event()?.adre_a || event()?.comarca || event()?.comarca_i_municipi || event()?.tel_fon ||
         event()?.data_inici || event()?.horari || event()?.url) {
-        <div class=" border-b border-teal-700 text-teal-700 text-xl mb-2">
+        <div class=" border-b border-teal-700 dark:border-teal-300 text-teal-700 dark:text-teal-300 text-xl mb-2">
             Localització
         </div>
         @if (event()?.url) {
-        <div class="flex"> <span class="text-stone-700 font-bold me-2">Web:</span>
-            <a [href]="event()?.url" class="text-decoration-none text-teal-700 flex" target="_blank">{{
+        <div class="flex"> <span class="text-stone-700 dark:text-stone-300 font-bold me-2">Web:</span>
+            <a [href]="event()?.url" class="text-decoration-none text-teal-700 dark:text-teal-300 flex" target="_blank">{{
                 event()?.url }}</a>
         </div>
         }
         @if (event()?.adre_a) {
-        <div class="text-teal-700"> <span class="text-stone-700 font-bold me-2">Adreça:</span>{{ event()?.adre_a }}
+        <div class="text-teal-700 dark:text-teal-300"> <span class="text-stone-700 dark:text-stone-300 font-bold me-2">Adreça:</span>{{ event()?.adre_a }}
         </div>
         }
         @if (event()?.comarca) {
-        <div class="text-teal-700"> <span class="text-stone-700 font-bold me-2">Comarca:</span>{{
+        <div class="text-teal-700 dark:text-teal-300"> <span class="text-stone-700 dark:text-stone-300 font-bold me-2">Comarca:</span>{{
             event()?.comarca!.split('/')[1] }} </div>
         }
         @if (event()?.comarca_i_municipi) {
-        <div class="text-teal-700"> <span class="text-stone-700 font-bold me-2">Municipi:</span>{{
+        <div class="text-teal-700 dark:text-teal-300"> <span class="text-stone-700 dark:text-stone-300 font-bold me-2">Municipi:</span>{{
             event()!.comarca_i_municipi!.split("/")[event()!.comarca_i_municipi!.split("/").length - 1] | titlecase
             |
             cleanCategoryText }} </div>
         }
         @if (event()?.tel_fon) {
-        <div class="text-teal-700"> <span class="text-stone-700 font-bold me-2">Teléfon:</span>{{ event()?.tel_fon
+        <div class="text-teal-700 dark:text-teal-300"> <span class="text-stone-700 dark:text-stone-300 font-bold me-2">Teléfon:</span>{{ event()?.tel_fon
             }}
         </div>
         }
         @if (event()?.data_inici) {
-        <div class="text-teal-700"> <span class="text-stone-700 font-bold me-2">Data inici:</span>{{
+        <div class="text-teal-700 dark:text-teal-300"> <span class="text-stone-700 dark:text-stone-300 font-bold me-2">Data inici:</span>{{
             event()?.data_inici
             | date:'dd / MM / yyyy'
             }} </div>
         }
         @if (event()?.horari) {
-        <div class="text-teal-700"> <span class="text-stone-700 font-bold me-2">Horari:</span>{{ event()?.horari }}
+        <div class="text-teal-700 dark:text-teal-300"> <span class="text-stone-700 dark:text-stone-300 font-bold me-2">Horari:</span>{{ event()?.horari }}
         </div>
         }
         @if (event()?.entrades) {
-        <div class="text-teal-700"> <span class="text-stone-700 font-bold me-2">Entrades:</span>{{ event()?.entrades
+        <div class="text-teal-700 dark:text-teal-300"> <span class="text-stone-700 dark:text-stone-300 font-bold me-2">Entrades:</span>{{ event()?.entrades
             }}
         </div>
         }
         @if (event()?.nombotoentrades) {
-        <div class="text-teal-700"> <span class="text-stone-700 font-bold me-2">Entrades:</span>{{
+        <div class="text-teal-700 dark:text-teal-300"> <span class="text-stone-700 dark:text-stone-300 font-bold me-2">Entrades:</span>{{
             event()?.nombotoentrades }}
         </div>
         }
@@ -135,30 +135,30 @@
         </div>
         }
 
-        <div class=" border-b border-teal-700 text-teal-700 text-xl mt-4">
+        <div class=" border-b border-teal-700 dark:border-teal-300 text-teal-700 dark:text-teal-300 text-xl mt-4">
             Informació
         </div>
-        <div class="mt-2  text-stone-700 peer-checked:bg-teal-800 peer-checked:pt-2 peer-checked:text-teal-50">
+        <div class="mt-2  text-stone-700 dark:text-stone-200 peer-checked:bg-teal-800 peer-checked:pt-2 peer-checked:text-teal-50">
             {{ event()?.descripcio}}
 
         </div>
-        <div class=" border-b border-teal-700 text-teal-700 text-xl mt-2">
+        <div class=" border-b border-teal-700 dark:border-teal-300 text-teal-700 dark:text-teal-300 text-xl mt-2">
             Enllaços d'interés
         </div>
-        <div class="mt-2  text-stone-700 peer-checked:bg-teal-800 peer-checked:pt-2 peer-checked:text-teal-50">
+        <div class="mt-2  text-stone-700 dark:text-stone-200 peer-checked:bg-teal-800 peer-checked:pt-2 peer-checked:text-teal-50">
             <!-- @for (event()?.enllac1_url of this.event()?.enlla_os?.split(","); track $index;let index= $index) { -->
             @if (event()?.enllac1_nom) {
-            <a [href]="event()?.enllac1_url" class="text-decoration-none text-emerald-700 flex flex-nowrap"
+            <a [href]="event()?.enllac1_url" class="text-decoration-none text-emerald-700 dark:text-emerald-300 flex flex-nowrap"
                 target="_blank">{{
                 event()?.enllac1_nom }}</a>
             }
             @if (event()?.enllac2_nom) {
-            <a [href]="event()?.enllac2_url" class="text-decoration-none text-emerald-700 flex flex-nowrap"
+            <a [href]="event()?.enllac2_url" class="text-decoration-none text-emerald-700 dark:text-emerald-300 flex flex-nowrap"
                 target="_blank">{{
                 event()?.enllac2_nom }}</a>
             }
             @if (event()?.enllac3_nom) {
-            <a [href]="event()?.enllac3_url" class="text-decoration-none text-emerald-700 flex flex-nowrap"
+            <a [href]="event()?.enllac3_url" class="text-decoration-none text-emerald-700 dark:text-emerald-300 flex flex-nowrap"
                 target="_blank">{{
                 event()?.enllac3_nom }}</a>
             }
