--- a/src/app/pages/favoritos/favoritos.component.html
+++ b/src/app/pages/favoritos/favoritos.component.html
@@ -19,7 +19,7 @@
             <card [event]="event" />
             }
             @if(favoritos().length==0) {
-                <h3 class="text-center text-xl">No tens cap event favorit...</h3>
+                <h3 class="text-center text-xl text-gray-900 dark:text-gray-100">No tens cap event favorit...</h3>
             }
         </div>
     </section>
