--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -17,7 +17,7 @@
         <swiper-text-elements title="Categorías" [data]="acultural.categorias()"></swiper-text-elements>
     </section>
     <section class="px-6 ">
-        <p class="font-bold text-lg">Busca els events:</p>
+        <p class="font-bold text-lg text-gray-900 dark:text-gray-100">Busca els events:</p>
         <form [formGroup]="filterForm" (ngSubmit)="submit()">
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-2 p-2">
                 <div class="">
@@ -32,13 +32,13 @@
                     </fieldset>
                     <fieldset class="fieldset flex ">
                         <legend class="fieldset-legend">Selecció de zona</legend>
-                        <label class="text-lg"><input (change)="selector($event)" type="radio" name="selector"
-                                class="radio radio-neutral me-1 ms-3" value="provincia"
+                        <label class="text-lg radio-label-teal"><input (change)="selector($event)" type="radio" name="selector"
+                                class="me-1 ms-3" value="provincia"
                                 checked="checked" />Provincia</label>
-                        <label class="text-lg"><input (change)="selector($event)" type="radio" name="selector"
-                                class="radio radio-neutral me-1 ms-3" value="comarca" />Comarca</label>
-                        <label class="text-lg"><input (change)="selector($event)" type="radio" name="selector"
-                                class="radio radio-neutral me-1 ms-3" value="municipi" />Municipi</label>
+                        <label class="text-lg radio-label-teal"><input (change)="selector($event)" type="radio" name="selector"
+                                class="me-1 ms-3" value="comarca" />Comarca</label>
+                        <label class="text-lg radio-label-teal"><input (change)="selector($event)" type="radio" name="selector"
+                                class="me-1 ms-3" value="municipi" />Municipi</label>
                     </fieldset>
                 </div>
                 <div>
